Fix Java 8 compatibility and add test plan
- Change compilation target from Java 17 to Java 8 for JMeter compatibility
- Replace String.isBlank() with trim().isEmpty() (Java 8 compatible)
- Update README to reflect Java 8+ requirement
- Add test plan for cluster testing with proper RabbitMQ configuration

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>